Fix card wrapping, resizing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,14 +2,15 @@
 table.cards tbody {
     align-items: center;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: .5rem;
-    width: inherit;
+    margin-top: .25rem;
 }
 
 table.cards tbody tr {
     border: 3px solid #dee2e6;
     border-radius: var(--bs-border-radius) !important;
+    margin: .25rem 0;
     width: 19rem;
 }
 
